--- a/Style.css
+++ b/Style.css
@@ -1,40 +1,44 @@
 /* Style.css */
 
-
-
-
 body{
-    background-color: grey; 
+    background: gray;
     background: url(headerImg.jpg) no-repeat;
     background-size: cover;
     height: 600px;
     font-family: Calibri; 
-   color: white; 
-    
+    color: white; 
 }
+
+.vertical-text{
+ transform: rotate(90deg);
+ float: right;
+ margin: 0px;
+ transform-origin: top right 0;
+ font-size: 70px;
+ z-index: 99;
+}
+
 #wrapper {
-    padding: 4%;
-    padding-right: 50px;
-    padding-left: 300px;
-margin: 0%;
-
+  padding: 4%;
+  padding-right: 5%;
+  padding-left: 20%;
+  margin: 0%;
 }
-header {
 
+header {
   padding-right: 30px;
   z-index: 9999;
   position: relative;
 }
 
-ul{
+ header ul{
  margin: 0px;
  padding: 0px;
  list-style: none;
  color: whitesmoke;
- 
 }
 
-ul li{
+header ul li{
   float: right;
   width: 60px;
   height: 60px;
@@ -45,36 +49,36 @@ ul li{
   text-align: center;
   font-size: 15px;
 }
-ul li ul li {
+
+header ul li ul li {
   font-size: 15px;
   display: none;
   border-radius: 60px;
 }
 
-ul li:hover ul li{
-  display: block;
-  
-  
+header ul li:hover ul li{
+  display: block; 
 }
 
-ul li a{
+header li a{
   text-decoration: none;
   color: white;
   display: block;
   
 }
 
-ul li a:hover{
+header ul li a:hover{
   background-color: lightgrey;
   color: black;
   border-radius: 60px;
 
 }
+
     
 main {
-  background-color: black;
-  opacity: .4;
-  border-radius: 10px;
+ margin-top: 5px;
+ background-color: rgb(0, 0, 0, 0.4) ;
+ border-radius: 10px;
  padding: 10px;
  margin-right: 95px;
  z-index: 999;
@@ -82,32 +86,45 @@ main {
 }
 
 #about {
-  padding-right: 40px;
-
-}
-h1{
-   
-
-
+ padding-right: 40px;
 }
 
-h2{
-
+.card li {
+  list-style: none;
+  display: inline-block;
+  width: 200px;
+  height: auto;
+  border: 2px solid black;
+  text-align: left;
+  font-size: 15px;
+  margin: 5px;
+  padding:5px;
 }
 
-h6 { 
-  padding: 0px;
-  margin: 4px;
-  
-
+footer{ 
+  display: block;
 }
-p {
-  
 
-}
 
 footer img {
-padding-top:20px; 
+  padding-top:20px; 
   height: 50px;
-padding-left: 10%;
-}
+  width: auto;
+  display: inline-block;
+  padding-left: 1%;
+} 
+
+ img {
+  display: block;
+  width: 100%;
+  }
+  
+  a {
+    color: aliceblue;
+  }
+
+  a:hover {
+    cursor: pointer;
+  }
+
+
